--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 # Scientific
-numpy==1.20
-pandas==1.2
+numpy==1.20.*
+pandas==1.2.*
 # GIS
-shapely==1.7
-geopandas==0.8
+shapely==1.7.*
+geopandas==0.8.*
 # Plotting
-matplotlib==3.3
-descartes==1.1
+matplotlib==3.3.*
+descartes==1.1.*
 # Utilities
-tqdm==4.57
-stringcase==1.2
-black==20.8b1
-pyarrow==3.0
+tqdm==4.57.*
+stringcase==1.2.*
+black==20.8b1.*
+pyarrow==3.0.*
 
