DS-6563 - Added new commandline arguments to docker-compose file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,6 @@ services:
         "--output-dir", "/home/jovyan/data/parcel_samples_rollup",
         "--include-parcel-geometry",
         "--packs", "solar", "building"
+        "--country", "us",
+        "--primary-decision", "largest_intersection"
     ]
