--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 # Scientific
-numpy==1.20.*
-pandas==1.4.*
+numpy==1.22.2
+pandas==1.3.5
 
 # GIS
-shapely==1.8.*
+shapely==1.8.0
 rtree
-geopandas==0.10.*
+geopandas==0.10.2
 
 # Plotting
-matplotlib==3.3.*
-descartes==1.1.*
+matplotlib==3.5.1
+descartes==1.1.0
 
 # Utilities
-tqdm>=4.57.*
-stringcase==1.2.*
-pyarrow==7.0.*
+tqdm>=4.63.0
+stringcase==1.2.0
+pyarrow==5.0.0
 
 # Style
-isort==5.8.*
-black==20.8b1.*
+isort==5.10.1
+black==21.12b0
 
 # Testing
-pytest==6.2.*
+pytest==7.0.1
