DS-7509 - Lots of documentation cleanup - typos, clarity etc.

--- a/environment.yaml
+++ b/environment.yaml
@@ -17,6 +17,8 @@ dependencies:
   - stringcase
   - pyarrow
   - isort
-  - black
+  - black=21.12b0
   - pytest
   - ipykernel
+  - requests
+  - click=8.0.4
