AICP-1233 - Correcting to generic paths in docker compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,13 @@ services:
       - JUPYTER_LAB_ENABLE=yes
     user: root
     volumes:
-      - /mnt/DATA/data_michaelbewley/Development/datascience/nearmap-ai-user-guides/data:/home/jovyan/data
-      - /mnt/DATA2/offline_exports/processed:/home/jovyan/offline_exports/processed
+      - <local path to data directory>:/home/jovyan/data
     entrypoint: [
         "start.sh",
         "python", "/home/jovyan/nearmap-ai-user-guides/scripts/ai_offline_parcel.py",
-        "--parcel-dir", "/home/jovyan/data/parcels/DS-7498_TM002-us-tree-cover",
-        "--output-dir", "/home/jovyan/offline_exports/processed/DS-7498_TM002-us-tree-cover",
-        "--packs", "building", "vegetation",
+        "--parcel-dir", "/home/jovyan/data/<path to parcels>",
+        "--output-dir", "/home/jovyan/data/<path to results>",
+        "--packs", "building", "building_char", "roof_char", "roof_cond", "pool", "solar", "trampoline", "construction", "vegetation", "surfaces",
         "--country", "us",
         "--primary-decision", "largest_intersection",
         "--workers",  "32",
