AICP-1557 - Added alpha and beta flags to commandline (defaulting to true). Fixed up tests with more recent data. Fixed black formatting. Added fidelity filtering to config.json (defaulting to 0).

--- a/config.json
+++ b/config.json
@@ -15,6 +15,10 @@
         "a2a81381-13c6-57dc-a967-af696e45f6c7": 0.8,
         "3680e1b8-8ae1-5a15-8ec7-820078ef3298": 0.7
     },
+        "min_fidelity": {
+        "a2e4ae39-8a61-5515-9d18-8900aa6e6072": 0.0,
+        "c08255a4-ba9f-562b-932c-ff76f2faeeeb": 0.0
+    },
     "min_area_in_parcel": {
         "a2e4ae39-8a61-5515-9d18-8900aa6e6072": 25,
         "c08255a4-ba9f-562b-932c-ff76f2faeeeb": 25,
@@ -29,6 +33,6 @@
         "753621ee-0b9f-515e-9bcf-ea40b96612ab": 0.5,
         "0339726f-081e-5a6e-b9a9-42d95c1b5c8a": 0.5,
         "a2a81381-13c6-57dc-a967-af696e45f6c7": 0.5,
-        "3680e1b8-8ae1-5a15-8ec7-820078ef3298": 0.5,
+        "3680e1b8-8ae1-5a15-8ec7-820078ef3298": 0.5
     }
 }
