--- a/environment-minimal.yaml
+++ b/environment-minimal.yaml
@@ -6,7 +6,7 @@ dependencies:
   # Python version
   - python>=3.11
   
-  # Core dependencies (matching setup.py)
+  # Core dependencies only
   - geopandas>=1.0.1
   - numpy
   - pandas
@@ -19,15 +19,6 @@ dependencies:
   - shapely
   - stringcase
   - tqdm
-  
-  # Development dependencies (optional)
-  - black
-  - isort
-  - pytest
-  
-  # Notebook dependencies (optional)
-  - ipykernel
-  - matplotlib
   
   # Install nmaipy package in editable mode
   - pip
