--- a/environment-minimal.yaml
+++ b/environment-minimal.yaml
@@ -6,21 +6,7 @@ dependencies:
   # Python version
   - python>=3.11
   
-  # Core dependencies only
-  - geopandas>=1.1.0
-  - numpy
-  - pandas
-  - psutil
-  - pyarrow
-  - pyproj
-  - python-dotenv
-  - requests
-  - rtree
-  - shapely
-  - stringcase
-  - tqdm
-  
-  # Install nmaipy package in editable mode
+  # Install nmaipy and its core dependencies from pyproject.toml
   - pip
   - pip:
     - -e .
