[TRO-4001] Fix address-based API queries and update Python requirements
Address-based queries now work correctly with POST requests by:
- Adding address fields (streetAddress, city, state, zip) as query parameters
- Including country parameter (uppercase) for address lookups
- Properly passing address_fields through the request chain

Also:
- Reduced logging noise by moving gridding logs from info to debug level
- Updated Python requirement to 3.12
- Added fsspec and s3fs for S3 parcel file support

Tests updated and passing for address mode functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,14 +21,14 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: GIS",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 keywords = ["nearmap", "ai", "geospatial", "gis", "aerial", "imagery", "buildings", "vegetation"]
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
+    "fsspec",
     "geopandas>=1.1.0",
     "numpy",
     "pandas",
@@ -38,6 +38,7 @@ dependencies = [
     "python-dotenv",
     "requests",
     "rtree",
+    "s3fs",
     "shapely",
     "stringcase",
     "tqdm",
@@ -73,7 +74,7 @@ version = {attr = "nmaipy.__version__.__version__"}
 
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ['py312']
 
 [tool.isort]
 profile = "black"
