[TRO-4039] refactor: Simplify per-class file export logic
- Remove class_level_csv parameter and --no-class-level-csv CLI option
- Per-class CSVs no longer include geometry (rollups only)
- Per-class GeoParquets require both class_level_files and save_features
- Update documentation to use NearmapAIExporter throughout
- Add run_10_test.py as tracked quick start example
- Add pre-release versioning guidance to VERSIONING.md

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ tests/data/cache/*
 # Test artifacts
 test_pip_install.py
 
-# Local run scripts
+# Local run scripts (run_*.py ignored except specific examples)
 run_*.py
 !run.py
+!run_10_test.py
