[TRO-4115] Release version 4.0.3
Fix error file lookup using wrong filename in run() method.

The error file check was looking for 'errors_{stem}_{i}.parquet' but
errors are written as 'feature_api_errors_{stem}_{i}.parquet'. This
caused sys.exit(1) to trigger whenever a chunk had no data, even when
errors were properly recorded.

Combined with the 4.0.2 fix for gridding crashes, this ensures exports
complete gracefully when AOIs have no coverage for the requested date range.

- Fix error file lookup in run() to use feature_api_errors_ prefix
- Standardize roof_age_exporter to use roof_age_errors_ prefix
- Improve error message when both rollup and error files missing
- Fix environment-minimal.yaml Python version constraint

--- a/environment-minimal.yaml
+++ b/environment-minimal.yaml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  # Python version
-  - python>=3.14
+  # Python version - 3.12 or 3.13 (3.14 not yet released)
+  - python >=3.12,<3.14
 
   # Install nmaipy and its core dependencies from pyproject.toml
   - pip
