[TRO-4117] Version 4.0.6 and unify version source
- Bump version to 4.0.6 for release
- Update conda.recipe/meta.yaml to dynamically read version from
  __version__.py using load_file_regex instead of hardcoding
- Eliminates version sync issues between pip and conda builds

--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "nmaipy" %}
-{% set version = "4.0.5a1" %}
+{% set version = load_file_regex(load_file='../nmaipy/__version__.py', regex_pattern='__version__ = "([^"]+)"').group(1) %}
 
 package:
   name: {{ name|lower }}
