[TRO-4143] Optimize API warmup and fix pandas concat FutureWarning and deprecation warning

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ markers =
     live_api: marks tests that require a live API connection (deselect with '-m "not live_api"')
     integration: marks integration tests
     unit: marks unit tests
+    slow: marks tests as slow (deselect with '-m "not slow"')
     
 testpaths = tests
 python_files = test_*.py
