[TRO-4203] Refresh documentation for v4.2 release
Fix factual errors (Python 3.11→3.12, missing fsspec/s3fs deps), add S3
output docs, overhaul CLAUDE.md architecture to cover all 20 modules,
expand README output section and CLI docs, untrack developer run scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,8 @@ tests/data/cache/*
 # Test artifacts
 test_pip_install.py
 
-# Local run scripts (run_*.py ignored except specific examples)
+# Local run scripts (developer convenience, not tracked)
+run.py
 run_*.py
-!run.py
 !run_10_test.py
+run.sh
